--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
     "build:platform": "ts-node ./script/build-ng-package.ts",
     "build:builder": "tsc -p tsconfig.builder.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint --max-warnings 0 \"./**/*.ts\""
   },
   "private": true,
   "author": "wszgrcy",
@@ -30,7 +31,12 @@
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.7.7",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "cpx": "^1.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.0",
     "jest": "^27.0.4",
