--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,15 @@
       "port": 5858
     },
     {
+      "name": "测试-watch-dev",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "test", "--", "-t", "builder-watch-dev"],
+      "port": 5858
+    },
+    {
       "name": "测试template-compiler",
       "type": "node",
       "request": "launch",
