feat: 静态依赖注入支持

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {},
-  "exclude": [],
-  "include": ["**/*.spec.ts"]
+  "exclude": ["**/fixture/**"],
+  "files": [],
+  "include": ["src/builder"]
 }
