--- a/tsconfig.builder.json
+++ b/tsconfig.builder.json
@@ -1,14 +1,15 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["./src/builder"],
-  "files": [],
+  "files": ["./src/builder/browser/index.ts"],
   "compilerOptions": {
     "noImplicitThis": true,
     "outDir": "dist/builder",
     "declaration": true,
     "strict": true
   },
+
   "exclude": [
+    "./src/**/fixture",
     "./src/**/*.template.ts",
     "./src/**/*.d.ts",
     "**/*.spec.ts",
