--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build:platform && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
     "build:platform": "ts-node ./script/build-ng-package.ts",
-    "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts tsconfig.builder.json",
+    "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/tsconfig.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\""
   },
