--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - pipe
+      - master
 env:
   REPOSITORY_PATH: https://${{secrets.ACCESS_TOKEN}}@github.com/
 jobs:
@@ -40,7 +40,6 @@ jobs:
         with:
           token: ${{ secrets.NPM_PUBLISH_TOKEN }}
           package: ./dist/package.json
-          tag: beta
       - if: ${{ github.repository_owner	== 'wszgrcy' && steps.publish.outputs.type != 'none' }}
         run: |
           echo "[${{ steps.publish.outputs.type }}]Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
