--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-miniprogram",
-  "version": "0.0.6-beta.1",
+  "version": "0.0.6",
   "description": "使用Angular开发小程序",
   "keywords": [
     "Angular",
