--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
     "prebuild": "rimraf ./dist",
     "build": "npm run build:platform && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
@@ -17,20 +17,21 @@
   "author": "wszgrcy",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1200.4",
-    "@angular-devkit/build-angular": "^12.0.4",
-    "@angular-devkit/core": "^12.0.4",
-    "@angular-devkit/schematics": "^12.0.4",
-    "@angular/common": "^12.0.4",
-    "@angular/compiler": "^12.0.4",
-    "@angular/compiler-cli": "^12.0.4",
-    "@angular/core": "^12.0.4",
+    "@angular-devkit/architect": "0.1300.2",
+    "@angular-devkit/build-angular": "13.0.2",
+    "@angular-devkit/core": "13.0.2",
+    "@angular-devkit/schematics": "13.0.2",
+    "@angular/common": "13.0.1",
+    "@angular/compiler": "13.0.1",
+    "@angular/compiler-cli": "13.0.1",
+    "@angular/core": "13.0.1",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@ngtools/webpack": "^12.0.4",
+    "@ngtools/webpack": "13.0.2",
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.7.7",
     "@types/jest": "^26.0.23",
+    "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "cpx": "^1.5.0",
@@ -42,16 +43,17 @@
     "husky": "^7.0.0",
     "jest": "^27.0.4",
     "miniprogram-api-typings": "^3.3.2",
-    "ng-packagr": "^12.2.1",
+    "ng-packagr": "13.0.3",
     "prettier": "^2.4.0",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "rxjs": "6.6.7",
     "static-injector": "^1.0.9",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.2.1",
-    "typescript": "4.2.4",
-    "webpack": "5.38.1",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "~4.4.2",
+    "webpack": "5.60.0",
+    "webpack-sources": "^3.2.0",
     "zone.js": "^0.11.4"
   },
   "dependencies": {
