--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,22 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "测试(jasmine)",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "test"],
+      "port": 7899
+    },
+    {
       "name": "测试",
       "type": "node",
       "request": "launch",
       "cwd": "${workspaceRoot}",
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run-script", "test", "--", "-t", "builder-dev"],
-      "port": 5858
+      "port": 9229
     },
     {
       "name": "测试-watch-dev",
@@ -38,7 +47,22 @@
       "cwd": "${workspaceRoot}",
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run-script", "test", "--", "-t", "ng-class-resolver"],
-      "port": 5858
+      "port": 9229
+    },
+    {
+      "name": "测试load_ems",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "test"],
+      "port": 9229
+    },
+    {
+      "name": "附加当前",
+      "type": "node",
+      "request": "attach",
+      "port": 9229
     }
   ]
 }
