--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
+    "test": "npm run test:jasmine",
+    "test:jest": "NODE_OPTIONS=\"--experimental-vm-modules --inspect-brk\"  TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
+    "test:jasmine": "node ./script/startup-jasmine",
     "prebuild": "rimraf ./dist",
     "build": "npm run build:platform && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
@@ -21,16 +23,17 @@
     "@angular-devkit/build-angular": "13.0.2",
     "@angular-devkit/core": "13.0.2",
     "@angular-devkit/schematics": "13.0.2",
-    "@angular/common": "13.0.1",
-    "@angular/compiler": "13.0.1",
-    "@angular/compiler-cli": "13.0.1",
-    "@angular/core": "13.0.1",
+    "@angular/common": "13.0.2",
+    "@angular/compiler": "13.0.2",
+    "@angular/compiler-cli": "13.0.2",
+    "@angular/core": "13.0.2",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@ngtools/webpack": "13.0.2",
     "@types/fs-extra": "^9.0.12",
     "@types/jasmine": "^3.7.7",
     "@types/jest": "^26.0.23",
+    "@types/node": "^14",
     "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
@@ -40,8 +43,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "fs-extra": "^10.0.0",
+    "glob": "^7.2.0",
     "husky": "^7.0.0",
-    "jest": "^27.0.4",
+    "jasmine": "^3.10.0",
+    "jest": "^27.3.1",
     "miniprogram-api-typings": "^3.3.2",
     "ng-packagr": "13.0.3",
     "prettier": "^2.4.0",
