--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es2019",
     "moduleResolution": "node",
     "module": "commonjs",
     "experimentalDecorators": true,
