chore: 构建前准备

--- a/src/builder/tsconfig.json
+++ b/src/builder/tsconfig.json
@@ -11,6 +11,7 @@
     "./**/fixture",
     "./**/*.template.ts",
     "./**/*.d.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/*.xspec.ts"
   ]
 }
