--- a/src/package.json
+++ b/src/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/wszgrcy/angular-miniprogram#readme",
   "dependencies": {
-    "cyia-code-util": "^1.3.2",
+    "cyia-code-util": "1.3.7",
     "webpack-bootstrap-assets-plugin": "^2.0.2",
-    "static-injector": "^1.0.9"
+    "static-injector": "1.0.9"
+  },
+  "peerDependencies": {
+    "ng-packagr": "13.0.6",
+    "@angular/core": "13.0.2"
   },
   "builders": "./builder/builders.json"
 }
