fix: library在项目中非首次构建丢失

--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -17,6 +17,7 @@
     "test"
   ],
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true,
+    "compilationMode": "full"
   }
 }
