--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,15 @@
       "port": 7899
     },
     {
+      "name": "测试(jasmine)-browser-watch",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "test", "watch"],
+      "port": 7899
+    },
+    {
       "name": "测试",
       "type": "node",
       "request": "launch",
