--- a/script/tsconfig.json
+++ b/script/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./",
     "esModuleInterop": true,
     "downlevelIteration": true
   },
-  "include": ["**/*"],
+  "include": ["**/*.ts"],
   "exclude": []
 }
