--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "test": "npm run test:jasmine library&& npm run test:jasmine",
     "test:jest": "NODE_OPTIONS=\"--experimental-vm-modules --inspect-brk\"  TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
-    "test:jasmine": "node ./script/startup-jasmine",
+    "test:jasmine": "tsc -p ./script/tsconfig.startup-jasmine.json && node ./script/startup-jasmine.js",
     "prebuild": "rimraf ./dist",
     "build": "npm run build:platform && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
     "build:platform": "ts-node ./script/build-ng-package.ts",
-    "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/tsconfig.json",
+    "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./tsconfig.builder.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\""
   },
