chore: forms-hook初始化

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -171,6 +171,13 @@
       "parserOptions": {
         "project": "tsconfig.library.json"
       }
+    },
+    {
+      "files": ["schematics/internal/**/*.ts"],
+      "excludedFiles": [],
+      "parserOptions": {
+        "project": "tsconfig.internal-schematics.json"
+      }
     }
   ]
 }
