chore: 子包构建与自定义结构型指令

--- a/script/tsconfig.startup-jasmine.json
+++ b/script/tsconfig.startup-jasmine.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": { "skipLibCheck": true },
+  "compilerOptions": { "skipLibCheck": true, "outDir": "." },
   "files": ["./startup-jasmine.ts"],
   "include": [],
   "exclude": []
