chore: 测试相关分离

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -29,7 +29,7 @@ jobs:
           yarn lint
       - name: test
         run: |
-          yarn test
+          yarn test:ci
       - name: build
         run: |
           yarn build
