fix: forms双向绑定未更新视图

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
       "request": "launch",
       "cwd": "${workspaceRoot}",
       "runtimeExecutable": "npm",
-      "runtimeArgs": ["run-script", "test", "browser"],
+      "runtimeArgs": ["run-script", "test", "builder-dev"],
       "port": 7899
     },
     {
