chore: 构建及替换@angular/common

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prebuild": "rimraf ./dist",
     "build": "npm run build:library && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
-    "build:library": "npm run forms-hook && node ./script/start-build-library",
+    "build:library": "npm run forms-hook && npm run common-hook && node ./script/start-build-library",
     "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./tsconfig.builder.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\"",
@@ -26,7 +26,6 @@
     "@angular-devkit/build-angular": "13.0.2",
     "@angular-devkit/core": "13.0.2",
     "@angular-devkit/schematics": "13.0.2",
-    "@angular/common": "13.0.2",
     "@angular/compiler": "13.0.2",
     "@angular/compiler-cli": "13.0.2",
     "@angular/core": "13.0.2",
