feat: 支持字节小程序

--- a/tsconfig.library.json
+++ b/tsconfig.library.json
@@ -24,6 +24,18 @@
       "declaration"
     ],
     "paths": {
+      "angular-miniprogram/platform/default": [
+        "./platform/default/index.ts"
+      ],
+      "angular-miniprogram/platform/wx": [
+        "./platform/wx/index.ts"
+      ],
+      "angular-miniprogram/platform/type": [
+        "./platform/type/index.ts"
+      ],
+      "angular-miniprogram/platform": [
+        "./platform/index.ts"
+      ],
       "angular-miniprogram/common": [
         "./common/index.ts"
       ],
