--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "husky": "^7.0.0",
     "jasmine": "^3.10.0",
     "jest": "^27.3.1",
+    "mini-types": "^0.1.7",
     "miniprogram-api-typings": "^3.3.2",
     "ng-packagr": "13.0.6",
     "prettier": "^2.4.0",
