--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test:ci": "npm run forms-hook && npm run common-hook && yarn build && npm run test:jasmine library&& npm run test:jasmine",
+    "test:ci": "npm run build:library && npm run test:jasmine library&& npm run test:jasmine",
     "test": "npm run test:jasmine",
     "test:jest": "NODE_OPTIONS=\"--experimental-vm-modules --inspect-brk\"  TS_NODE_PROJECT=./tsconfig.spec.json jest --config ./jest.builder.config.ts",
     "test:jasmine": "tsc -p ./script/tsconfig.startup-jasmine.json && node ./script/startup-jasmine.js",
     "prebuild": "rimraf ./dist",
-    "build": "npm run build:library && npm run build:builder && npm run copy:assets",
+    "build": " npm run build:library && npm run build:builder && npm run copy:assets",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
-    "build:library": "npm run forms-hook && npm run common-hook && node ./script/start-build-library",
+    "hook-code": "npm run forms-hook && npm run common-hook",
+    "build:library": "node ./script/start-build-library",
     "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./tsconfig.builder.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\"",
