--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\"",
     "forms-hook": "ts-node ./script/run-forms-hook.ts",
-    "common-hook": "ts-node ./script/run-common-hook.ts"
+    "common-hook": "ts-node ./script/run-common-hook.ts",
+    "coverage": "nyc npm run test"
   },
   "private": true,
   "author": "wszgrcy",
@@ -63,6 +64,7 @@
   },
   "dependencies": {
     "cyia-code-util": "^1.3.7",
+    "nyc": "^15.1.0",
     "webpack-bootstrap-assets-plugin": "^2.0.3"
   }
 }
