--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - master
+      - alpha
 env:
 jobs:
   build:
@@ -24,7 +25,7 @@ jobs:
           yarn lint
       - name: test
         run: |
-          yarn test
+          yarn test:ci
       - name: build
         run: |
           yarn build
