--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -27,6 +27,9 @@ jobs:
       - name: lint
         run: |
           yarn lint
+      - name: hook-code
+        run: |
+          yarn hook-code
       - name: test
         run: |
           yarn test:ci
