feat: 测试覆盖率及文档部署

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -8,6 +8,7 @@
     "test/**/*",
     "src/builder/angular-internal/**/*"
   ],
-  "reporter": ["html", "text"],
-  "all": false
+  "reporter": ["html", "text", "json-summary", "json"],
+  "all": false,
+  "report-dir": "./docs/coverage"
 }
