--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
+    "@types/karma": "^6.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
@@ -52,6 +54,8 @@
     "glob": "^7.2.0",
     "husky": "^7.0.0",
     "jasmine": "^3.10.0",
+    "jasmine-core": "^4.0.1",
+    "karma": "^6.3.17",
     "mini-types": "^0.1.7",
     "miniprogram-api-typings": "^3.3.2",
     "ng-packagr": "13.0.6",
@@ -64,7 +68,8 @@
     "typedoc": "^0.22.10",
     "typescript": "~4.4.2",
     "webpack": "5.60.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "^0.11.4",
+    "weapp.socket.io": "^3.0.0"
   },
   "dependencies": {
     "cyia-code-util": "^1.3.7",
