--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "npm run test:jasmine",
     "test:jasmine": "tsc -p ./script/tsconfig.startup-jasmine.json && node ./script/startup-jasmine.js",
     "prebuild": "rimraf ./dist",
-    "build": " npm run build:library && npm run build:builder && npm run copy:assets",
+    "build": " npm run build:library && npm run build:builder && npm run copy:assets && npm run build:karma",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
     "hook-code": "npm run forms-hook && npm run common-hook",
     "build:library": "node ./script/start-build-library",
     "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./tsconfig.builder.json",
+    "build:karma": "ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/karma/client/tsconfig.json && ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/karma/plugin/tsconfig.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\"",
     "forms-hook": "ts-node ./script/run-forms-hook.ts",
