--- a/src/builder/karma/client/tsconfig.json
+++ b/src/builder/karma/client/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
-    "outDir": "../../../../dist/karma/plugin",
+    "outDir": "../../../../dist/karma/client",
     "strict": false,
     "strictNullChecks": false,
     "allowUnreachableCode": true,
     "noUnusedParameters": false,
     "sourceMap": true,
     "declaration": true,
-    "esModuleInterop": true,
     "target": "ES2021",
     "module": "CommonJS",
-    "lib": ["ES2021"]
+    "lib": ["ES2021"],
+    "skipLibCheck": true
   },
-  "files": ["./index.ts"]
+  "files": ["index.ts"]
 }
