--- a/package.json
+++ b/package.json
@@ -27,54 +27,58 @@
   "author": "wszgrcy",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/architect": "0.1300.2",
-    "@angular-devkit/build-angular": "13.0.2",
-    "@angular-devkit/core": "13.0.2",
-    "@angular-devkit/schematics": "13.0.2",
-    "@angular/compiler": "13.0.2",
-    "@angular/compiler-cli": "13.0.2",
-    "@angular/core": "13.0.2",
+    "@angular-devkit/architect": "0.1400.5",
+    "@angular-devkit/build-angular": "14.0.5",
+    "@angular-devkit/core": "14.0.5",
+    "@angular-devkit/schematics": "14.0.5",
+    "@angular/compiler": "14.0.5",
+    "@angular/compiler-cli": "14.0.5",
+    "@angular/core": "14.0.5",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@ngtools/webpack": "13.0.2",
+    "@ngtools/webpack": "14.0.5",
     "@types/fs-extra": "^9.0.12",
     "@types/glob": "^7.2.0",
     "@types/jasmine": "^3.7.7",
+    "@types/karma": "^6.3.3",
     "@types/node": "^14",
+    "@types/socket.io-client": "^3.0.0",
     "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
-    "@types/karma": "^6.3.3",
-    "@types/socket.io-client": "^3.0.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
+    "cyia-ngx-devkit": "0.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.1.0",
     "glob": "^7.2.0",
     "husky": "^7.0.0",
     "jasmine": "^3.10.0",
     "jasmine-core": "^4.0.1",
     "karma": "^6.3.17",
     "mini-types": "^0.1.7",
-    "miniprogram-api-typings": "^3.3.2",
-    "ng-packagr": "13.0.6",
+    "miniprogram-api-typings": "^3.5.0",
+    "ng-packagr": "14.0.3",
     "prettier": "^2.4.0",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "rxjs": "6.6.7",
-    "static-injector": "^1.0.9",
-    "ts-node": "^10.4.0",
-    "typedoc": "^0.22.10",
-    "typescript": "~4.4.2",
-    "webpack": "5.60.0",
-    "zone.js": "^0.11.4",
-    "weapp.socket.io": "^3.0.0"
+    "static-injector": "1.0.10",
+    "ts-node": "^10.8.2",
+    "typedoc": "^0.22.17",
+    "typescript": "~4.7.2",
+    "weapp.socket.io": "^3.0.0",
+    "webpack": "5.72.1",
+    "zone.js": "^0.11.4"
   },
   "dependencies": {
-    "cyia-code-util": "^1.3.7",
+    "cyia-code-util": "^1.3.9",
     "nyc": "^15.1.0",
     "webpack-bootstrap-assets-plugin": "^2.0.3"
+  },
+  "resolutions": {
+    "@angular-devkit/build-angular/browserslist": "4.20.4"
   }
 }
