feat: library构建成功,但是被引入失败

--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
   "author": "wszgrcy",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/architect": "0.1500.0",
-    "@angular-devkit/build-angular": "15.0.0",
-    "@angular-devkit/core": "15.0.0",
-    "@angular-devkit/schematics": "15.0.0",
-    "@angular/compiler": "15.0.0",
-    "@angular/compiler-cli": "15.0.0",
-    "@angular/core": "15.0.0",
+    "@angular-devkit/architect": "0.1600.3",
+    "@angular-devkit/build-angular": "16.0.3",
+    "@angular-devkit/core": "16.0.3",
+    "@angular-devkit/schematics": "16.0.3",
+    "@angular/compiler": "16.0.3",
+    "@angular/compiler-cli": "16.0.3",
+    "@angular/core": "16.0.3",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@ngtools/webpack": "15.0.0",
+    "@ngtools/webpack": "16.0.3",
     "@types/fs-extra": "^9.0.12",
     "@types/glob": "^7.2.0",
     "@types/jasmine": "^3.7.7",
@@ -48,7 +48,7 @@
     "@typescript-eslint/parser": "^5.44.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
-    "cyia-ngx-devkit": "0.0.3",
+    "cyia-ngx-devkit": "0.0.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -60,25 +60,27 @@
     "karma": "^6.3.17",
     "mini-types": "^0.1.7",
     "miniprogram-api-typings": "^3.6.0",
-    "ng-packagr": "15.0.1",
+    "ng-packagr": "16.0.1",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
-    "rxjs": "6.6.7",
-    "static-injector": "2.0.0",
+    "rxjs": "^7.4.0",
+    "static-injector": "2.1.1",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.21",
-    "typescript": "~4.8.4",
+    "tslib": "^2.5.2",
+    "typedoc": "^0.24.7",
+    "typescript": "~5.0.2",
     "weapp.socket.io": "^3.0.0",
-    "webpack": "5.75.0",
-    "zone.js": "^0.11.4"
+    "webpack": "5.80.0",
+    "zone.js": "~0.13.0"
   },
   "dependencies": {
-    "cyia-code-util": "^1.4.0",
+    "cyia-code-util": "^1.8.0",
     "nyc": "^15.1.0",
     "webpack-bootstrap-assets-plugin": "^2.0.3"
   },
   "resolutions": {
-    "@angular-devkit/build-angular/browserslist": "4.21.4"
+    "ng-packagr/rxjs": "^7.4.0",
+    "inquirer/rxjs": "^7.4.0"
   }
 }
