--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16.x
       - name: install-dependencies
         run: |
-          npm i
+          npm i --legacy-peer-deps
       - name: lint
         run: |
           npm run lint
