--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
   "author": "wszgrcy",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/architect": "0.1600.3",
-    "@angular-devkit/build-angular": "16.0.3",
-    "@angular-devkit/core": "16.0.3",
-    "@angular-devkit/schematics": "16.0.3",
-    "@angular/compiler": "16.0.3",
-    "@angular/compiler-cli": "16.0.3",
-    "@angular/core": "16.0.3",
+    "@angular-devkit/architect": "0.1703.1",
+    "@angular-devkit/build-angular": "17.3.1",
+    "@angular-devkit/core": "17.3.1",
+    "@angular-devkit/schematics": "17.3.1",
+    "@angular/compiler": "17.3.1",
+    "@angular/compiler-cli": "17.3.1",
+    "@angular/core": "17.3.1",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@ngtools/webpack": "16.0.3",
+    "@ngtools/webpack": "17.3.1",
     "@types/fs-extra": "^9.0.12",
     "@types/glob": "^7.2.0",
     "@types/jasmine": "^3.7.7",
     "@types/karma": "^6.3.3",
-    "@types/node": "16.11.68",
+    "@types/node": "20.11.30",
     "@types/socket.io-client": "^3.0.0",
     "@types/webpack-sources": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
-    "cyia-ngx-devkit": "0.0.4",
+    "cyia-ngx-devkit": "0.0.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -59,28 +59,26 @@
     "jasmine-core": "4.0.1",
     "karma": "^6.3.17",
     "mini-types": "^0.1.7",
-    "miniprogram-api-typings": "^3.6.0",
-    "ng-packagr": "16.0.1",
+    "miniprogram-api-typings": "^3.12.2",
+    "ng-packagr": "17.3.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "static-injector": "3.0.0",
-    "ts-node": "^10.9.1",
+    "static-injector": "4.0.2",
+    "ts-node": "^10.9.2",
     "tslib": "^2.5.2",
-    "typedoc": "^0.24.7",
-    "typescript": "~5.0.2",
+    "tsx": "^4.7.1",
+    "typedoc": "^0.25.12",
+    "typescript": "5.4.2",
     "weapp.socket.io": "^3.0.0",
-    "webpack": "5.80.0",
-    "zone.js": "~0.13.0"
+    "webpack": "5.90.3",
+    "zone.js": "0.14.4"
   },
   "dependencies": {
     "cyia-code-util": "^1.8.0",
     "nyc": "^15.1.0",
     "webpack-bootstrap-assets-plugin": "^2.0.3"
   },
-  "resolutions": {
-    "ng-packagr/rxjs": "^7.4.0",
-    "inquirer/rxjs": "^7.4.0"
-  }
+  "resolutions": {}
 }
