refactor: 修改通过测试 肯定要改其他的,还没仿真测试

--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "prebuild": "rimraf ./dist",
     "build": " npm run build:library && npm run build:builder && npm run copy:assets && npm run build:karma",
     "copy:assets": "cpx \"./src/builder/**/*.json\" ./dist/builder && cpx \"./src/builder/**/*.js\" ./dist/builder && cpx ./readme.md ./dist",
-    "hook-code": "npm run forms-hook && npm run common-hook",
     "build:library": "node ./script/start-build-library",
     "build:builder": "ts-node -P ./script/tsconfig.json ./script/build.ts ./tsconfig.builder.json",
-    "build:karma": "ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/karma/client/tsconfig.json && ts-node -P ./script/tsconfig.json ./script/build.ts ./src/builder/karma/plugin/tsconfig.json",
+    "build:karma": "tsx ./script/build.ts ./src/builder/karma/client/tsconfig.json && tsx ./script/build.ts ./src/builder/karma/plugin/tsconfig.json",
     "prepare": "husky install",
     "lint": "eslint --max-warnings 0 \"./**/*.ts\"",
-    "forms-hook": "ts-node ./script/run-forms-hook.ts",
-    "common-hook": "ts-node ./script/run-common-hook.ts",
+    "sync": "code-recycle ./script/package-sync.ts --cwd ./src/library",
     "coverage": "nyc npm run test",
     "typedoc": "typedoc",
     "deploy": "npm run typedoc && npm run build:library && npm run test:jasmine library && npm run coverage-badge -- init && cpx \"./deploy/doc/**/*\" ./docs && cpx \"./deploy/api-doc/**/*\" ./docs/api-doc && npm run coverage && npm run coverage-badge -- success && cpx ./deploy/doc/assets/img/badge.svg ./docs/assets/img",
@@ -34,6 +32,7 @@
     "@angular/compiler": "17.3.1",
     "@angular/compiler-cli": "17.3.1",
     "@angular/core": "17.3.1",
+    "@code-recycle/cli": "^1.3.10",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@ngtools/webpack": "17.3.1",
