--- a/src/builder/karma/plugin/tsconfig.json
+++ b/src/builder/karma/plugin/tsconfig.json
@@ -10,7 +10,12 @@
     "esModuleInterop": true,
     "target": "ES2021",
     "module": "CommonJS",
-    "lib": ["ES2021"]
+    "lib": [
+      "ES2021"
+    ],
+    "skipLibCheck": true
   },
-  "files": ["./index.ts"]
+  "files": [
+    "./index.ts"
+  ]
 }
