chore: 去掉无用代码

--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -30,7 +30,7 @@ jobs:
           npm run lint
       - name: hook-code
         run: |
-          npm run hook-code
+          npm run sync
       - name: test
         run: |
           npm run test:ci
