--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           npm ci --legacy-peer-deps
       - name: hook-code
         run: |
-          npm run hook-code
+          npm run sync
       - name: build-docs
         continue-on-error: true
         run: |
