--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -26,7 +26,7 @@ jobs:
           npm run lint
       - name: hook-code
         run: |
-          npm run hook-code
+          npm run sync
       - name: test
         run: |
           npm run test:ci
