--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@ngtools/webpack": "17.3.1",
-    "@types/fs-extra": "^9.0.12",
+    "@types/fs-extra": "11.0.4",
     "@types/glob": "^7.2.0",
     "@types/jasmine": "^3.7.7",
     "@types/karma": "^6.3.3",
@@ -51,22 +51,22 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "11.2.0",
     "glob": "^7.2.0",
     "husky": "^7.0.0",
-    "jasmine": "3.10.0",
-    "jasmine-core": "4.0.1",
+    "jasmine": "5.1.0",
+    "jasmine-core": "5.1.2",
     "karma": "^6.3.17",
     "mini-types": "^0.1.7",
     "miniprogram-api-typings": "^3.12.2",
     "ng-packagr": "17.3.0",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0",
+    "prettier": "3.2.5",
+    "pretty-quick": "4.0.0",
+    "rimraf": "5.0.5",
+    "rxjs": "^7.8.1",
     "static-injector": "4.0.2",
     "ts-node": "^10.9.2",
-    "tslib": "^2.5.2",
+    "tslib": "2.6.2",
     "tsx": "^4.7.1",
     "typedoc": "^0.25.12",
     "typescript": "5.4.2",
