--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ng-packagr": "17.3.0",
     "prettier": "3.2.5",
     "pretty-quick": "4.0.0",
+    "queue-microtask": "^1.2.3",
     "rimraf": "5.0.5",
     "rxjs": "^7.8.1",
     "static-injector": "4.0.2",
